[gd_scene load_steps=3 format=3 uid="uid://dlhhvw5v1mmea"]

[ext_resource type="Script" uid="uid://bnjjfoslqvkxh" path="res://stage_select.gd" id="1_c21t4"]
[ext_resource type="Texture2D" uid="uid://bs02gdtbiosau" path="res://asset/stage/stagebg.png" id="2_92j4d"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -409.0
offset_top = -231.0
offset_right = -409.0
offset_bottom = -231.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c21t4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_92j4d")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer_Outer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer_Outer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "SELECT STAGE"

[node name="StageContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer_Outer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer_Outer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "BACK TO MENU"
